# haskell-future

./: .gitignore  LICENSE  future.cabal  package.yaml
src/: Future.hs  Main.hs
src/Control/Concurrent/: Future.hs
test/Control/Concurrent/: FutureSpec.hs  Latch.hs
