name:                future
version:             0.1.0.0
synopsis:            A port of Scala's Future to Haskell
homepage:            https://github.com/derekjw/haskell-future
license:             BSD3
license-file:        LICENSE
author:              Derek Williams
maintainer:          derek@fyrie.net
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Future
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  