name:                future
version:             0.1.0.0
synopsis:            A port of Scala's Future to Haskell
homepage:            https://github.com/derekjw/haskell-future
license:             BSD3
license-file:        LICENSE
author:              Derek Williams
maintainer:          derek@fyrie.net
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Control.Concurrent.Future
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  build-depends:    base, future, hspec == 1.11.*
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0